--- a/unicorn-sys-api/build.gradle
+++ b/unicorn-sys-api/build.gradle
@@ -71,7 +71,10 @@ publishing {
 }
 
 signing {
-    sign publishing.publications.mavenJavaSysApi
+    required { !version.endsWith("-SNAPSHOT") }
+    publishing.publications.configureEach {
+        sign it
+    }
 }
 
 dependencies {
