--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ plugins {
     id 'com.lwohvye.java-conventions'
     id 'org.springframework.boot' // 主要是定义了这个，定义了SpringBoot的Version相关，并提供了application, bootJar, bootBuildImage这些Task
     // 在parent root执行Task，会同步执行sub project的Task，比如执行了bootJar，那会执行subPro的bootJar(若其中没有该Task会ignore)
-    id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
+    id 'io.github.gradle-nexus.publish-plugin' version '1.2.0'
 }
 
 ext.sharedManifest = manifest {
@@ -130,8 +130,8 @@ nexusPublishing {
         sonatype {
             nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
             snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
-            username.set(System.getenv('OSSRH_USERNAME') ?: providers.systemProperty("ossrhUsername").orElse("").forUseAtConfigurationTime())
-            password.set(System.getenv('OSSRH_PASSWORD') ?: providers.systemProperty("ossrhPassword").orElse("").forUseAtConfigurationTime())
+            username.set(System.getenv('OSSRH_USERNAME') ?: providers.gradleProperty("ossrhUsername").orElse(""))
+            password.set(System.getenv('OSSRH_PASSWORD') ?: providers.gradleProperty("ossrhPassword").orElse(""))
         }
     }
 }
