--- a/unicorn-starter/pom.xml
+++ b/unicorn-starter/pom.xml
@@ -31,20 +31,20 @@
 
     <properties>
         <java.version>19</java.version>
-        <project.core.version>3.x-SNAPSHOT</project.core.version>
+        <project.core.version>4.0.0-beta</project.core.version>
         <maven.compiler.release>19</maven.compiler.release>
         <lombok.version>1.18.26</lombok.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
         <javassist.version>3.29.2-GA</javassist.version>
         <shardingsphere.version>5.2.0</shardingsphere.version>
-        <kotlin.version>1.7.22</kotlin.version>
+        <kotlin.version>1.8.10</kotlin.version>
     </properties>
 
     <dependencies>
         <!--    system模块    -->
         <dependency>
             <groupId>com.lwohvye</groupId>
-            <artifactId>unicorn-system</artifactId>
+            <artifactId>unicorn-security</artifactId>
             <version>${project.core.version}</version>
         </dependency>
         <!--   logging模块     -->
@@ -62,7 +62,7 @@
         <!-- 代码生成模块 -->
         <dependency>
             <groupId>com.lwohvye</groupId>
-            <artifactId>unicorn-cd-generator</artifactId>
+            <artifactId>unicorn-code-gen</artifactId>
             <version>${project.core.version}</version>
         </dependency>
         <dependency>
