--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,10 +13,10 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ main ]
+    branches: [ dev_3.x ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ main ]
+    branches: [ dev_3.x ]
   schedule:
     - cron: '18 2 * * 2'
 
@@ -102,6 +102,15 @@ jobs:
       #- run: |
       #   make bootstrap
       #   make release
+      - name: Publish 2 MavenLocal
+        uses: gradle/gradle-build-action@6095a76664413da4c8c134ee32e8a8ae900f0f1f
+        env:
+          OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
+        with:
+          arguments: publishToMavenLocal
+      - name: Build Unicorn-Starter
+        run: mvn -B package --file unicorn-starter/pom.xml -P jigsaw
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
