try multi branches

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "dev_3.x", "delta-oauth2.0" ]
   pull_request:
     branches: [ "main" ]
 
