--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,7 +13,7 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, dev_3.x, delta-oauth2.0 ]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ main ]
