--- a/gradle.properties
+++ b/gradle.properties
@@ -18,15 +18,15 @@ captchaVersion=2.0.0
 commonsBeanutilsVersion=1.9.4
 commonsConfigurationVersion=2.8.0
 easyCaptchaVersion=1.6.2
-fastutilVersion=8.5.9
-hutoolVersion=5.8.13
+fastutilVersion=8.5.
+hutoolVersion=5.8.15
 ip2regionVersion=3.0.1
 jjwtVersion=0.11.5
 kotlinVersion=1.8.10
 kotlinxCoroutinesVersion=1.6.4
 log4jdbcVersion=1.18
 logbackVersion=1.4.5
-logstashVersion=7.2
+logstashVersion=7.3
 mapstructVersion=1.5.3.Final
 mapstructSpringExtensionsVersion=1.0.0
 oshiCoreVersion=6.4.0
@@ -37,4 +37,4 @@ springBootVersion=3.0.2
 springdocVersion=2.0.2
 thumbnailatorVersion=0.4.19
 xercesVersion=2.12.2
-yauaaVersion=7.14.0
+yauaaVersion=7.15.0
