--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ easyCaptchaVersion=1.6.2
 hutoolVersion=5.8.15
 ip2regionVersion=3.0.4
 jjwtVersion=0.11.5
-kotlinVersion=1.8.10
+kotlinVersion=1.8.20-RC
 kotlinxCoroutinesVersion=1.6.4
 log4jdbcVersion=1.18
 logbackVersion=1.4.6
