--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ hutoolVersion=5.8.15
 ip2regionVersion=3.0.4
 jjwtVersion=0.11.5
 kotlinVersion=1.8.20-RC
-kotlinxCoroutinesVersion=1.6.4
+kotlinxCoroutinesVersion=1.7.0-Beta
 log4jdbcVersion=1.18
 logbackVersion=1.4.6
 logstashVersion=7.3
