--- a/unicorn-oauth2-dis/client-app/pom.xml
+++ b/unicorn-oauth2-dis/client-app/pom.xml
@@ -5,10 +5,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.security.oauth2</groupId>
-		<artifactId>spring-security-oauth2-parent</artifactId>
+		<artifactId>unicorn-oauth2-dis</artifactId>
 		<version>1.0.0.BUILD-SNAPSHOT</version>
 	</parent>
-	<artifactId>spring-security-oauth2-client-app</artifactId>
+	<artifactId>client-app</artifactId>
 
 	<dependencies>
 		<dependency>
