--- a/unicorn-oauth2-legacy/.gitignore
+++ b/unicorn-oauth2-legacy/.gitignore
@@ -1,37 +1,30 @@
-HELP.md
-.gradle
-build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### STS ###
-.apt_generated
+classes/
+target/
+*/src/*/java/META-INF
+*/src/META-INF/
+*/src/*/java/META-INF/
 .classpath
-.factorypath
-.project
-.settings
 .springBeans
-.sts4-cache
+.project
+.DS_Store
+.settings/
+.idea/*
+out/
 bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
-
-### IntelliJ IDEA ###
-.idea
-*.iws
+intellij/
+build/
+*.log
+*.log.*
 *.iml
 *.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+*.iws
+.gradle/
+atlassian-ide-plugin.xml
+!etc/eclipse/.checkstyle
+.checkstyle
+s101plugin.state
+.attach_pid*
+!.mvn/wrapper/maven-wrapper.jar
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
-### VS Code ###
-.vscode/
+!.idea/checkstyle-idea.xml
+!.idea/externalDependencies.xml
