--- a/unicorn-oauth2-legacy/auth-server/pom.xml
+++ b/unicorn-oauth2-legacy/auth-server/pom.xml
@@ -5,10 +5,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.security.oauth2</groupId>
-		<artifactId>unicorn-oauth2-dis</artifactId>
+		<artifactId>unicorn-oauth2-legacy</artifactId>
 		<version>1.0.0.BUILD-SNAPSHOT</version>
 	</parent>
-	<artifactId>resource-server</artifactId>
+	<artifactId>auth-server</artifactId>
 
 	<dependencies>
 		<dependency>
@@ -34,6 +34,10 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-jwt</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.nimbusds</groupId>
+			<artifactId>nimbus-jose-jwt</artifactId>
 		</dependency>
 	</dependencies>
 
