--- a/unicorn-oauth2-legacy/pom.xml
+++ b/unicorn-oauth2-legacy/pom.xml
@@ -10,7 +10,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.springframework.security.oauth2</groupId>
-	<artifactId>unicorn-oauth2-dis</artifactId>
+	<artifactId>unicorn-oauth2-legacy</artifactId>
 	<version>1.0.0.BUILD-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
@@ -21,7 +21,7 @@
 	</modules>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 	</properties>
 
 	<dependencyManagement>
