--- a/unicorn-oauth2/default-authorizationserver/samples-default-authorizationserver.gradle
+++ b/unicorn-oauth2/default-authorizationserver/samples-default-authorizationserver.gradle
@@ -17,7 +17,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.boot:spring-boot-starter-jdbc"
-    implementation 'org.springframework.security:spring-security-oauth2-authorization-server:1.0.1'
+    implementation "org.springframework.security:spring-security-oauth2-authorization-server:$springAuthorizationServerVersion"
     runtimeOnly "com.h2database:h2"
 
     testImplementation "org.springframework.boot:spring-boot-starter-test"
