--- a/unicorn-oauth2/gradle.properties
+++ b/unicorn-oauth2/gradle.properties
@@ -1,9 +1,7 @@
 version=1.1.0-SNAPSHOT
-org.gradle.jvmargs=-Xmx3g -XX:+HeapDumpOnOutOfMemoryError
-org.gradle.parallel=true
-org.gradle.caching=true
-springFrameworkVersion=6.0.7
-springSecurityVersion=6.1.0-M2
+springFrameworkVersion=6.0.4
+springSecurityVersion=6.0.2
+springAuthorizationServerVersion=1.0.1
 springJavaformatVersion=0.0.35
 springJavaformatExcludePackages=org/springframework/security/config org/springframework/security/oauth2
 checkstyleToolVersion=8.34
