--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ easyCaptchaVersion=1.6.2
 hutoolVersion=5.8.15
 ip2regionVersion=3.0.4
 jjwtVersion=0.11.5
-kotlinVersion=1.8.20-RC
+kotlinVersion=1.8.20-RC2
 kotlinxCoroutinesVersion=1.7.0-Beta
 log4jdbcVersion=1.18
 logbackVersion=1.4.6
@@ -32,7 +32,7 @@ oshiCoreVersion=6.4.0
 poiVersion=5.2.3
 quartzVersion=2.3.2
 redissonVersion=3.20.0
-springBootVersion=3.0.4
+springBootVersion=3.0.5
 springdocVersion=2.0.4
 thumbnailatorVersion=0.4.19
 xercesVersion=2.12.2
