--- a/unicorn-oauth2/default-authorizationserver/samples-default-authorizationserver.gradle
+++ b/unicorn-oauth2/default-authorizationserver/samples-default-authorizationserver.gradle
@@ -1,12 +1,10 @@
 plugins {
-    id "org.springframework.boot" version "3.0.2"
+    id "org.springframework.boot" version "${springBootVersion}"
     id "io.spring.dependency-management" version "1.0.11.RELEASE"
-    id "java"
 }
 
 group = project.rootProject.group
 version = project.rootProject.version
-sourceCompatibility = "17"
 
 repositories {
     mavenCentral()
@@ -15,6 +13,7 @@ repositories {
 
 dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.boot:spring-boot-starter-jdbc"
     implementation "org.springframework.security:spring-security-oauth2-authorization-server:$springAuthorizationServerVersion"
