--- a/unicorn-oauth2/gradle.properties
+++ b/unicorn-oauth2/gradle.properties
@@ -1,6 +1,7 @@
 version=1.1.0-SNAPSHOT
+spring-security.version=6.0.2
 springFrameworkVersion=6.0.4
-springSecurityVersion=6.0.2
+springBootVersion=3.0.2
 springAuthorizationServerVersion=1.0.1
 springJavaformatVersion=0.0.35
 springJavaformatExcludePackages=org/springframework/security/config org/springframework/security/oauth2
