--- a/unicorn-oauth2/messages-resource/samples-messages-resource.gradle
+++ b/unicorn-oauth2/messages-resource/samples-messages-resource.gradle
@@ -1,20 +1,18 @@
 plugins {
-	id "org.springframework.boot" version "3.0.2"
-	id "io.spring.dependency-management" version "1.0.11.RELEASE"
-	id "java"
+    id "org.springframework.boot" version "${springBootVersion}"
+    id "io.spring.dependency-management" version "1.0.11.RELEASE"
 }
 
 group = project.rootProject.group
 version = project.rootProject.version
-sourceCompatibility = "17"
 
 repositories {
-	mavenCentral()
-	maven { url "https://repo.spring.io/milestone" }
+    mavenCentral()
+    maven { url "https://repo.spring.io/milestone" }
 }
 
 dependencies {
-	implementation "org.springframework.boot:spring-boot-starter-web"
-	implementation "org.springframework.boot:spring-boot-starter-security"
-	implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-security"
+    implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
 }
