--- a/unicorn-oauth2/samples-gateway-client/samples-gateway-client.gradle
+++ b/unicorn-oauth2/samples-gateway-client/samples-gateway-client.gradle
@@ -20,7 +20,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
     implementation "org.springframework.cloud:spring-cloud-starter-gateway:$gatewayVersion"
-    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 //    implementation "io.projectreactor.netty:reactor-netty"
 //    implementation "org.webjars:webjars-locator-core"
 //    implementation "org.webjars:bootstrap:3.4.1"
