draft try kotlin 1.8.20

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,12 +16,12 @@
 bizlogVersion=3.0.3
 captchaVersion=2.0.0
 commonsBeanutilsVersion=1.9.4
-commonsConfigurationVersion=2.8.0
+commonsConfigurationVersion=2.9.0
 easyCaptchaVersion=1.6.2
 hutoolVersion=5.8.15
 ip2regionVersion=3.0.4
 jjwtVersion=0.11.5
-kotlinVersion=1.8.20-RC2
+kotlinVersion=1.8.20
 kotlinxCoroutinesVersion=1.7.0-Beta
 log4jdbcVersion=1.18
 logbackVersion=1.4.6
@@ -33,7 +33,7 @@ poiVersion=5.2.3
 quartzVersion=2.3.2
 redissonVersion=3.20.0
 springBootVersion=3.0.5
-springdocVersion=2.0.4
+springdocVersion=2.1.0
 thumbnailatorVersion=0.4.19
 xercesVersion=2.12.2
 yauaaVersion=7.15.0
