--- a/unicorn-oauth2/federated-identity-authorizationserver/samples-federated-identity-authorizationserver.gradle
+++ b/unicorn-oauth2/federated-identity-authorizationserver/samples-federated-identity-authorizationserver.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "org.springframework.boot" version "${springBootVersion}"
-    id "io.spring.dependency-management" version "1.0.11.RELEASE"
+    id "io.spring.dependency-management" version "1.1.0"
 }
 
 group = project.rootProject.group
@@ -19,7 +19,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
     implementation "org.springframework.boot:spring-boot-starter-jdbc"
     implementation "org.webjars:webjars-locator-core"
-    implementation "org.webjars:bootstrap:3.4.1"
-    implementation "org.webjars:jquery:3.4.1"
+    implementation "org.webjars:bootstrap:5.2.3"
+    implementation 'org.webjars:jquery:3.6.4'
     runtimeOnly "com.h2database:h2"
 }
