--- a/unicorn-oauth2/samples-default-authorizationserver/samples-default-authorizationserver.gradle
+++ b/unicorn-oauth2/samples-default-authorizationserver/samples-default-authorizationserver.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "org.springframework.boot" version "${springBootVersion}"
-    id "io.spring.dependency-management" version "1.0.11.RELEASE"
+    id "io.spring.dependency-management" version "1.1.0"
 }
 
 group = project.rootProject.group
