--- a/unicorn-oauth2/samples-gateway-client/samples-gateway-client.gradle
+++ b/unicorn-oauth2/samples-gateway-client/samples-gateway-client.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "org.springframework.boot" version "${springBootVersion}"
-    id "io.spring.dependency-management" version "1.0.11.RELEASE"
+    id "io.spring.dependency-management" version "1.1.0"
 }
 
 group = project.rootProject.group
@@ -16,12 +16,13 @@ ext {
 }
 
 dependencies {
-    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
     implementation "org.springframework.cloud:spring-cloud-starter-gateway:$gatewayVersion"
+    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     implementation "org.webjars:webjars-locator-core"
-    implementation "org.webjars:bootstrap:3.4.1"
-    implementation "org.webjars:jquery:3.4.1"
+    implementation "org.webjars:bootstrap:5.2.3"
+    implementation 'org.webjars:jquery:3.6.4'
+
 }
