--- a/unicorn-oauth2/samples-resource-server/samples-resource-server.gradle
+++ b/unicorn-oauth2/samples-resource-server/samples-resource-server.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "org.springframework.boot" version "${springBootVersion}"
-    id "io.spring.dependency-management" version "1.0.11.RELEASE"
+    id "io.spring.dependency-management" version "1.1.0"
 }
 
 group = project.rootProject.group
