--- a/gradle.properties
+++ b/gradle.properties
@@ -33,6 +33,7 @@ poiVersion=5.2.3
 quartzVersion=2.3.2
 redissonVersion=3.20.0
 springBootVersion=3.0.5
+springAuthorizationServerVersion=1.0.1
 springdocVersion=2.1.0
 thumbnailatorVersion=0.4.19
 xercesVersion=2.12.2
