--- a/unicorn-oauth2/samples-gateway-client/samples-gateway-client.gradle
+++ b/unicorn-oauth2/samples-gateway-client/samples-gateway-client.gradle
@@ -1,21 +1,11 @@
-plugins {
-    id "org.springframework.boot" version "${springBootVersion}"
-    id "io.spring.dependency-management" version "1.1.0"
-}
-
-group = project.rootProject.group
-version = project.rootProject.version
-
-repositories {
-    mavenCentral()
-    maven { url "https://repo.spring.io/milestone" }
-}
+import org.springframework.boot.gradle.plugin.SpringBootPlugin
 
 ext {
     gatewayVersion = '4.0.4'
 }
 
 dependencies {
+    api platform(SpringBootPlugin.BOM_COORDINATES)
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
     implementation "org.springframework.cloud:spring-cloud-starter-gateway:$gatewayVersion"
