--- a/unicorn-oauth2/samples-resource-server/samples-resource-server.gradle
+++ b/unicorn-oauth2/samples-resource-server/samples-resource-server.gradle
@@ -5,4 +5,5 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-webflux"
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server"
+    api "org.springdoc:springdoc-openapi-starter-webflux-ui:$springdocVersion"
 }
