--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -109,11 +109,11 @@ jobs:
         with:
           arguments: publishToMavenLocal
 
-      - name: Build OAuth2.0 Module
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: build
-          build-root-directory: unicorn-oauth2 
+#      - name: Build OAuth2.0 Module
+#        uses: gradle/gradle-build-action@v2
+#        with:
+#          arguments: build
+#          build-root-directory: unicorn-oauth2
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
