--- a/buildSrc/src/main/groovy/com.lwohvye.java-conventions.gradle
+++ b/buildSrc/src/main/groovy/com.lwohvye.java-conventions.gradle
@@ -21,7 +21,7 @@ repositories {
 }
 
 group = 'com.lwohvye'
-version = '4.0.0-delta'
+version = '4.0.0-epsilon'
 java.sourceCompatibility = JavaVersion.VERSION_20
 
 java {
