--- a/unicorn-oauth2/samples-default-authorizationserver/samples-default-authorizationserver.gradle
+++ b/unicorn-oauth2/samples-default-authorizationserver/samples-default-authorizationserver.gradle
@@ -5,9 +5,9 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
     implementation "org.springframework.boot:spring-boot-starter-security"
-    implementation "org.springframework.boot:spring-boot-starter-jdbc"
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
     implementation "org.springframework.security:spring-security-oauth2-authorization-server:$springAuthorizationServerVersion"
-    runtimeOnly "com.h2database:h2"
+    runtimeOnly 'com.mysql:mysql-connector-j'
 
     testImplementation "org.springframework.boot:spring-boot-starter-test"
     testImplementation "org.springframework.security:spring-security-test"
