[#217] Authorization Server: use User from db, which is managed by Security Admin UI, just care User & Role.

--- a/unicorn-oauth2/samples-resource-server/src/main/resources/application.yml
+++ b/unicorn-oauth2/samples-resource-server/src/main/resources/application.yml
@@ -33,7 +33,7 @@ spring:
 #配置数据源
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${DB_HOST:10.211.55.140}:${DB_PORT:3306}/${DB_NAME:eladmin}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://${DB_HOST:10.211.55.140}:${DB_PORT:3306}/${DB_NAME:res-server}?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
     username: ${DB_USER:root}
     password: ${DB_PWD:root}
 
