--- a/unicorn-oauth2/samples-default-authorizationserver/samples-default-authorizationserver.gradle
+++ b/unicorn-oauth2/samples-default-authorizationserver/samples-default-authorizationserver.gradle
@@ -6,6 +6,8 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
     implementation "org.springframework.boot:spring-boot-starter-security"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation "org.springframework.security:spring-security-oauth2-authorization-server:$springAuthorizationServerVersion"
     runtimeOnly 'com.mysql:mysql-connector-j'
 
