--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,9 @@ subprojects {
         module('org.eclipse.angus:jakarta.mail', 'jakarta.mail', '1.0.0') {
             uses('jakarta.mail.util.StreamProvider')
         }
+        // runtimeOnly
+        automaticModule("org.apache.commons:commons-math3", 'commons.math3')
+        automaticModule("com.zaxxer:SparseBitSet", 'SparseBitSet')
     }
 }
 
