--- a/valentine-starter/pom.xml
+++ b/valentine-starter/pom.xml
@@ -30,8 +30,8 @@
     <name>Valentine P2P</name>
 
     <properties>
-        <java.version>17</java.version>
-        <unicorn.core.version>3.3.0-SNAPSHOT</unicorn.core.version>
+        <java.version>20</java.version>
+        <unicorn.core.version>4.0.0-delta</unicorn.core.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
     </properties>
     <!--这个意义不大-->
@@ -52,7 +52,7 @@
         <!--    system模块    -->
         <dependency>
             <groupId>com.lwohvye</groupId>
-            <artifactId>unicorn-system</artifactId>
+            <artifactId>unicorn-security</artifactId>
             <version>${unicorn.core.version}</version>
         </dependency>
         <!--   logging模块     -->
@@ -82,11 +82,23 @@
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
+            <version>${mapstruct.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.github.mouzt</groupId>
+            <artifactId>bizlog-sdk</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lwohvye.captcha</groupId>
+            <artifactId>captcha-spring-boot-starter</artifactId>
+            <version>2.0.0</version>
         </dependency>
     </dependencies>
 
@@ -127,7 +139,7 @@
                     <image>
                         <env>
                             <BP_JVM_TYPE>JDK</BP_JVM_TYPE>
-                            <BP_JVM_VERSION>17</BP_JVM_VERSION>
+                            <BP_JVM_VERSION>20</BP_JVM_VERSION>
                             <!--下面这个是加了个空格，不然会与原有的参数直接连在一起，导致出错-->
                             <BPE_DELIM_JAVA_TOOL_OPTIONS xml:space="preserve"> </BPE_DELIM_JAVA_TOOL_OPTIONS>
                             <!-- 下面这个可以配置多个，每个一项单独配置，但单独配置 enable-preview被ignore了，所以按下面这种方式配了 -->
